--- a/Class Notes/Exam 3/11-22-16.md
+++ b/Class Notes/Exam 3/11-22-16.md
@@ -100,3 +100,18 @@ COM 1000
     - Hypothesis 1: There will be a positive relationship between viewing Law & Order: SVU and **estimates of murder/manslaughter** in Florida.
 - Second Order Effect
     - Hypothesis 2: There will be a positive relationship between viewing Law & Order: SVU and **Mean World Syndrome**.
+
+- H1: More Law & Order: SVU is linked to higher estimates of murder/manslaughter
+    - r = .15, p < .05
+    - Small correlation between viewership and estimates
+- H2: more L&O: SVU is linked to stronger mean world syndrome
+    - r = .12, p < .05
+
+- Research Question 1: Will there be a positive relationship between viewing *The Walking Dead* and Mean World Attitude?
+    - r = .11, p = .10
+    - Not a significant relationship
+    - No link was observed perhaps because TWD is low on perceived realism
+
+- Important: Correlation ≠ Causation
+- Takeaway... People's TV viewing is related to their perceptions of the world in such a way that their perceptions are more like TV reality
+- Why does this matter?
