--- a/Class Notes/Exam 3/11-22-16.md
+++ b/Class Notes/Exam 3/11-22-16.md
@@ -1,7 +1,7 @@
-COM 1000
+COM 1000 11-22-16
 ============================================================
 
-## Mass Communication Resaerch and Theory
+## Mass Communication Research and Theory
 - Fundamental ideas behind mass communication research
 - The role of theory in mass communication research
 - Two studies based on COM 1000 participants' involvement
